// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as active 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-2 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<span
  class="emotion-2"
>
  <button
    aria-describedby="cf-ui-tooltip"
    class="IconButton EditorToolbarButton EditorToolbarButton--is-active IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as disabled 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<span>
  <button
    class="IconButton EditorToolbarButton IconButton--disabled IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    disabled=""
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with a tooltip 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-2 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<span
  class="emotion-2"
>
  <button
    aria-describedby="cf-ui-tooltip"
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<span>
  <button
    class="IconButton EditorToolbarButton my-extra-class IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="emotion-1 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders with a dropdown indicator 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-3 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  fill: #192532;
  height: 18px;
  width: 18px;
}

<span
  class="emotion-3"
>
  <button
    aria-describedby="cf-ui-tooltip"
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="emotion-2 IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="IconButton__icon emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
      <svg
        class="IconButton__dropdown emotion-1"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </span>
  </button>
</span>
`;
